fixup! BB 32308: Use direct browser sizing for letterboxing.
BB 44041: Make dialog overlays cover the correct area without fixed positioning.

--- a/browser/themes/shared/tabbrowser/content-area.css
+++ b/browser/themes/shared/tabbrowser/content-area.css
@@ -277,6 +277,11 @@
   position: absolute;
   inset: 0;
 
+  /* Override the <stack> `grid-area: 1 / 1` rule with an `auto` placement.
+   * Otherwise the .dialogStack start edges are placed relative to the
+   * center-aligned grid items, rather than the grid's padding area. */
+  grid-area: auto;
+
   /* Hide tab-modal dialogs when a window-modal one is up. */
   :root[window-modal-open] .browserStack > &,
   /* For some printing use cases we need to visually hide the dialog before
